# error-analyzer

./: .gitignore  Dockerfile  README.md  docker-cmds.txt  improve_swap_mem.sh  install_docker_on_ubuntu.sh  run_docker_app.sh  run_llama3.sh  setup.py
ai_error_analyzer/: pyproject.toml
ai_error_analyzer/src/ai_error_analyzer/: __init__.py  ai_helper.py  main.py
ai_error_analyzer/tests/: test_ollama.py
error_analyzer/: ai_helper.py  error_catcher.py  main.py
