[project]
name = "ai-error-analyzer"
version = "0.1.0"
description = "AI based Error analyzer for python."
authors = [
    {name = "Agnish Choudhury",email = "agnish.gh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai (>=1.93.0,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
